force-app/main/default/objects/ArdiraSurvey__Survey_Response_Files__c/ArdiraSurvey__Survey_Response_Files__c.object-meta.xml
<CustomObject>
    <description>The object stores information about Files attached to Survey Response.</description>
    <label>Ardira Survey Response File</label>
    <nameField>
        <label>Survey Response Files Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ardira Survey Response Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>