force-app/main/default/objects/ArdiraSurvey__Survey_Response_Files__c/fields/ArdiraSurvey__Campaign_Lookup__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Campaign_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup of the file with the Campaign record.</description>
    <inlineHelpText>Lookup of the file with the Campaign record.</inlineHelpText>
    <label>Campaign Lookup</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Survey Response Files</relationshipLabel>
    <relationshipName>Survey_Response_Files</relationshipName>
    <type>Lookup</type>
</CustomField>