force-app/main/default/objects/ArdiraSurvey__Survey_Response_Files__c/fields/ArdiraSurvey__File_Link__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__File_Link__c</fullName>
    <description>Uploaded file link.</description>
    <inlineHelpText>Uploaded file link.</inlineHelpText>
    <label>File Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>