force-app/main/default/objects/ArdiraSurvey__Survey_Response_Files__c/fields/ArdiraSurvey__File_Name__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__File_Name__c</fullName>
    <description>Uploaded file name</description>
    <inlineHelpText>Uploaded file name</inlineHelpText>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>