force-app/main/default/objects/ArdiraSurvey__Survey_Response_Files__c/fields/ArdiraSurvey__Lead_Lookup__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Lead_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup of the file with the Lead record.</description>
    <inlineHelpText>Lookup of the file with the Lead record.</inlineHelpText>
    <label>Lead Lookup</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Survey Response Files</relationshipLabel>
    <relationshipName>Survey_Response_Files</relationshipName>
    <type>Lookup</type>
</CustomField>