force-app/main/default/objects/ArdiraSurvey__Survey_Response_Files__c/fields/ArdiraSurvey__Opportunity_Lookup__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Opportunity_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup of the file with the Opportunity record.</description>
    <inlineHelpText>Lookup of the file with the Opportunity record.</inlineHelpText>
    <label>Opportunity Lookup</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Survey Response Files</relationshipLabel>
    <relationshipName>Survey_Response_Files</relationshipName>
    <type>Lookup</type>
</CustomField>