force-app/main/default/objects/ArdiraSurvey__Survey_Response_Files__c/fields/ArdiraSurvey__Question_Result__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Question_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup of the file with question result record.</description>
    <inlineHelpText>Lookup of the file with question result record.</inlineHelpText>
    <label>Question Result</label>
    <referenceTo>ArdiraSurvey__Question_Result__c</referenceTo>
    <relationshipLabel>Survey Response Files</relationshipLabel>
    <relationshipName>Survey_Response_Files</relationshipName>
    <type>Lookup</type>
</CustomField>