force-app/main/default/objects/ArdiraSurvey__Survey_Response_Files__c/fields/ArdiraSurvey__Size__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Size__c</fullName>
    <description>File size.</description>
    <inlineHelpText>File size.</inlineHelpText>
    <label>Size</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>