force-app/main/default/objects/ArdiraSurvey__Survey_Response_Files__c/fields/ArdiraSurvey__Source__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Source__c</fullName>
    <description>File storage type.</description>
    <inlineHelpText>File storage type.</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SF</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>