force-app/main/default/objects/ArdiraSurvey__Survey_Response_Files__c/fields/ArdiraSurvey__Survey_Result__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Survey_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup of the file with survey result record.</description>
    <inlineHelpText>Lookup of the file with survey result record.</inlineHelpText>
    <label>Survey Result</label>
    <referenceTo>ArdiraSurvey__Survey_Result__c</referenceTo>
    <relationshipLabel>Survey Response Files</relationshipLabel>
    <relationshipName>Survey_Response_Files</relationshipName>
    <type>Lookup</type>
</CustomField>