force-app/main/default/objects/ArdiraSurvey__Survey_Response_Files__c/fields/ArdiraSurvey__Uploaded_By__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Uploaded_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Uploaded by whom.</description>
    <label>Uploaded By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Survey_Response_Files</relationshipName>
    <type>Lookup</type>
</CustomField>